--- a/content/self-hosting.mdx
+++ b/content/self-hosting.mdx
@@ -1,16 +1,145 @@
 ---
-title: "Self hosting"
-publishedAt: "2024-06-18"
-summary: "My first post on my new blog."
+title: "My Self-Hosting Journey: From Google Photos to a Cross-Platform Private Cloud"
+publishedAt: "2025-05-13"
+summary: "TrueNAS home server using old laptop — Discover how I repurposed an old laptop into a feature-rich NAS with ZFS, Immich, backups, and a Windows VM, all under 500 USD"
 ---
 
-Hi there!
+![My TrueNAS Setup](/truenas-setup.jpg)
 
-```jsx
-console.log("Hello World");
-```
+## Why I Started
 
-| Header 1 | Header 2 |
-| -------- | -------- |
-| Cell 1   | Cell 2   |
-| Cell 3   | Cell 4   |
+For years, my family and I relied on Google Photos, eventually upgrading to Google One to meet our growing storage needs. But even with the expanded plans, storage always felt limited—and expensive. I wanted a long-term solution: something secure, scalable, and personal. That’s what led me down the rabbit hole of self-hosting.
+
+---
+
+## Hardware: Building the Foundation
+
+I repurposed an old laptop as the host machine and built a custom NAS using **TrueNAS SCALE**. It now powers a personal, resilient storage and services system for my entire household.
+
+### Parts I Procured
+
+| Component                | Description                                  | Cost (INR) | Cost (USD approx) |
+| ------------------------ | -------------------------------------------- | ---------- | ----------------- |
+| **UPS**                  | Provides 15 min backup for graceful shutdown | ₹3,200     | \~\$38            |
+| **Read Cache SSD**       | 500 GB SSD to boost read speed (optional)    | ₹2,500     | \~\$30            |
+| **Ethernet Cables (x2)** | For bonding & network redundancy             | ₹200       | \~\$2.5           |
+| **USB Hub**              | 3 USB + 1 Gigabit Ethernet                   | ₹1,600     | \~\$19            |
+| **Dual Bay HDD Dock**    | PiBox USB 3.0 for main storage               | ₹1,800     | \~\$21            |
+| **Cooling Fan**          | Cabinet USB fan to maintain thermals         | ₹400       | \~\$5             |
+| **2x 8 TB NAS HDDs**     | Seagate IronWolf, mirrored setup             | ₹16,200 each | \~\$200 each    |
+
+**Image: Disk list and topology overview**
+![Disk Configuration](Screenshot_2025-05-13_225455.png)
+
+---
+
+## Redundancy: Data + Network Resilience
+
+* **Network Bonding**: Created a bonded interface (`bond007`) combining two NICs. This provides **redundancy and additional bandwidth**, improving reliability and speed.
+* **Storage Redundancy**: The `data-pool` is configured using a **MIRROR VDEV** (RAID1 equivalent), meaning both 8 TB drives contain identical data. If one fails, the other continues.
+* **Future Backup Plan**: I plan to sync data to a friend's remote TrueNAS using **ZFS replication**, creating offsite protection.
+
+**Image: Network bonding configuration**
+![Network Interfaces](Screenshot_2025-05-13_230256.png)
+
+---
+
+## Privacy & Access Controls
+
+Every aspect of access is designed with **user privacy in mind**:
+
+* **SMB (Samba) Shares** are ACL-isolated: each family member has a private space (e.g., `/users/rachit-arora`), with a separate **shared folder** (`/common`) for movies and files.
+* **Audit logging** is enabled across shares.
+* No one sees what they're not supposed to.
+
+**Image: SMB Shares configuration**
+![SMB Shares](Screenshot_2025-05-13_230522.png)
+
+---
+
+## Functionalities: More Than Just Storage
+
+This isn’t just a file dump—it’s a smart, extensible home cloud:
+
+### 1. **Cross-Platform File Access**
+
+Using Samba (SMB), files are seamlessly available across:
+
+* Android (via CX File Explorer, FolderSync)
+* iOS (via FileBrowser or SMB support)
+* MacOS, Windows, Linux
+
+### 2. **Phone Backups**
+
+Using **FolderSync**, our family phones back up photos and files **daily** to their respective SMB shares.
+
+### 3. **Personal Google Photos Alternative**
+
+I migrated all albums from Google using `immich-go`. Now we use **Immich**, a beautiful self-hosted media server:
+
+* Indexes 100K+ photos & videos
+* Allows user-specific accounts
+* Handles albums, face recognition, and timeline views
+
+**Image: Immich server usage statistics**
+![Immich Usage](Screenshot_2025-05-13_225635.png)
+
+### 4. **Windows Virtual Machine**
+
+A lightweight Windows VM (`SanchitCloud`) runs on TrueNAS:
+
+* 6 GB RAM, 2 cores
+* RDP access
+* Accessible even on phone
+
+**Image: Virtual machine details**
+![VM Configuration](Screenshot_2025-05-13_230841.png)
+
+### 5. **App Hosting**
+
+Running apps like:
+
+* `immich`: photo/video management
+* `tailscale`: remote access from anywhere
+
+**Image: Running applications**
+![Apps Running](Screenshot_2025-05-13_230544.png)
+
+### 6. **Monitoring & Protection**
+
+* Disk health checks
+* S.M.A.R.T. status monitoring
+* Daily scrubs
+* ZFS snapshots planned
+
+**Image: System overview dashboard**
+![System Monitoring](Screenshot_2025-05-13_225711.png)
+
+---
+
+## Graceful Shutdowns
+
+While my UPS doesn’t have network monitoring, it gives a 15-minute buffer. I plan to use the **laptop’s mic** to detect the UPS beep and trigger an automatic shutdown.
+
+---
+
+## What’s Next?
+
+This setup is just the beginning:
+
+* **Upgrade Host**: Replace old laptop with low-power PC (e.g., Intel NUC or mini-ITX build)
+* **Add More Apps**:
+
+  * *Nextcloud* for syncing and calendars
+  * *Jellyfin* or *Plex* for media streaming
+
+**Image: Dataset structure overview**
+![Datasets](Screenshot_2025-05-14_004739.png)
+
+---
+
+## Final Thoughts
+
+Self-hosting isn’t just about saving money—it’s about owning your data, understanding your digital infrastructure, and building a cloud on your terms. From cross-platform file access to automated backups and virtual machines, this setup powers our digital lives—without relying on big tech.
+
+And it’s just getting started.
